<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="app_name">TrueMountBind</string>
    
    <string name="app_version_title">Version</string> 
     
    <string name="preferences_title">Preferences</string>   
    <string name="mount_on_boot_preference">Mount on boot</string>
    <string name="mount_on_boot_preference_on_summary">Automatically mount folders when device boots</string>
    <string name="mount_on_boot_preference_off_summary">Don\'t automatically mount folders when device boots</string>
         
    <string name="preferences_menuitem">Preferences</string>
    <string name="edit_mountpoints_menuitem">Edit</string>
    <string name="insert_mountpoint_menuitem">Insert</string>
    <string name="delete_mountpoints_menuitem">Delete all</string>
    <string name="delete_mountpoint_menuitem">Delete</string>
    <string name="mount_mountpoint_menuitem">Mount</string>
    <string name="unmount_mountpoint_menuitem">Unmount</string>
    
    <string name="source_folder_title_mini">S</string>
    <string name="source_folder_title">Source folder</string>  
    <string name="source_folder_help">Introduce the source folder pathname\nNormally it contains the files and resides physically at external sdcard</string>
 
    <string name="target_folder_title_mini">T</string>
    <string name="target_folder_title">Target folder</string> 
    <string name="target_folder_help">Introduce the target folder pathname\nIt\'s accessed by applications but not contains the real files, that are linked to source folder</string>
    
    <string name="select_a_folder">Select a folder</string>
    <string name="new_folder_title">New folder</string>
    <string name="moving_files">Moving files</string>
    <string name="please_wait">Please wait</string>
    <string name="enter_the_folder_name">Enter the name</string>
    <string name="accept_button">Accept</string>
    <string name="cancel_button">Cancel</string>
    <string name="combine_button">Combine</string>
    <string name="bypass_button">Bypass</string>
    <string name="select_button">Select</string>    
    <string name="up_button">Go up</string>  
    <string name="new_button">New</string>
    <string name="folder_up">Folder up</string>     
    <string name="warning_title">Warning</string> 
    <string name="error_title">Error</string>
    <string name="cannot_read_folder">Can\'t read folder</string>
    <string name="cannot_create_folder">Can\'t create folder</string>
    <string name="cannot_move_files">Can\'t move files</string>
    <string name="cannot_delete_files">Can\'t delete files</string>
    <string name="folder_do_not_exists">Folder don\'t exists</string>
    <string name="initialization_error_possibly_cause_no_root_adquired">Initialization error\n\nHave you enabled root permissions for this application?</string>
    <string name="cannot_enable_two_mountpoint_with_same_target">Can\'t enable two mount points with the same target</string>
    <string name="source_and_target_coincidence">Source and target folders can\'t be the same</string>
    <string name="no_mountpoints_defined">No defined mount points</string> 
    <string name="cannot_mount_mountpoint_while_ums_connection_active">Can\'t mount while UMS connection active</string>
    <string name="ums_connection_activated">UMS connection detected\nUnmounting all affected mountpoints for security reasons</string>
    <string name="ums_connection_deactivated">UMS connection detected\nAutomatically restoring affected mountpoints</string>
    <string name="device_bootup_completed_automounting">Device bootup completed\nAutomatically restoring mount states</string>
    <string name="cannot_obtain_root_privileges">Can\'t get root privileges</string>
    <string name="error_mounting_mountpoint">An error occurred while trying to link target</string>
    <string name="mounting_mountpoint_success">Target linked</string>
    <string name="error_unmounting_mountpoint">An error occurred while trying to unlink target</string>
    <string name="unmounting_mountpoint_success">Target unlinked</string>
    <string name="are_you_sure">Are you sure?</string> 
    <string name="duplicated_mountpoint">Already defined a mountpoint with same source and target folders</string>
    <string name="source_folder_do_not_exists_create_it_question">Source folder don\'t exists\n\nCreate it?</string>
    <string name="target_folder_is_not_empty_need_action">Target folder isn\'t empty\n\nDo you want to delete source contents and move target folder contents to source?</string>
	<string name="mountpoint_mounted_are_you_sure_want_to_delete">Mount point is active\nFor security reasons unmount is required before delete\n\nContinue?</string>        
	    
    <!--  Non language dependent strings -->
        
    <string name="app_version">1.0.0-RC1</string>
    
    <string name="mount_on_boot_preference_default">false</string>
        
        
</resources>
